<resources>
    <string name="app_name">13Д ЦТРС Р-423-1</string>
    <string name="structure">СТРУКТУРНАЯ СХЕМА</string>
    <string name="photo">ФОТО</string>
    <string name="menu">МЕНЮ</string>
    <string name="action_settings">Settings</string>
    <string name="modes">Режимы работы</string>
    <string name="o1sp48a">Окон-1, 48 кбит/с, напр. А</string>
    <string name="o2sp2x480">Окон-2, 2x480 кбит/с</string>
    <string name="o2sp48">Окон-2, 48 кбит/с</string>
    <string name="o2sp480">Окон-2, 480 кбит/с</string>
    <string name="o2sp2048">Окон-2, 2048 кбит/с</string>
    <string name="r1sp48">Ретр-1, 48 кбит/с</string>
    <string name="r1sp480">Ретр-1, 480 кбит/с</string>
    <string name="r1sp2x480">Ретр-1, 2x480 кбит/с</string>
    <string name="r1sp2048">Ретр-1, 2048 кбит/с</string>
    <string name="r2sp48">Ретр-2, 48 кбит/с</string>
    <string name="r2sp480">Ретр-2, 480 кбит/с</string>
    <string name="r2sp2x480">Ретр-2, 2x480 кбит/с</string>
    <string name="r2sp2048">Ретр-2, 2048 кбит/с</string>
    <string name="u1sp480">Узл-1, 480 кбит/с</string>
    <string name="u1sp2x480">Узл-1, 2x480 кбит/с</string>
    <string name="u2sp480dir1">Узл-2, 480 кбит/с, напр. 1</string>
    <string name="u2sp480dir2">Узл-2, 480 кбит/с, напр. 2</string>
    <string name="u2sp2x480dir1">Узл-2, 2x480 кбит/с, напр. 1</string>
    <string name="u2sp2x480dir2">Узл-2, 2x480 кбит/с, напр. 2</string>
    <string name="u2sp2048dir1">Узл-2, 2048 кбит/с, напр. 1</string>
    <string name="u2sp2048dir2">Узл-2, 2048 кбит/с, напр. 2</string>
    <string name="d66_title"><b> Линейный щит Д-66</b></string>
    <string name="d66_info">
        Предназначен для подключения соединения линейных окон¬чаний станции с абонентскими линиями (кабелями) связи, а также для соединения ВЧ входов/выходов стойки Д-39 станции с помощью радиочастотных кабелей. Визуально на передней панели Д-66 выделены две группы разъемов ПОЛУКОМПЛЕКТ I и ПОЛУКОМПЛЕКТ II, каждая имеет в своем составе три разъема для подключения ПТРК 10х2 и два разъема для П-296. На передней панели имеется возможность подсветки. Для подключения заземления имеются две «гайка-барашек». \n\n
        <b>Линейный щит Д-66 со стороны передней панели обеспечивает подключение:</b> \n
        \t 1. Семи кабелей ПТРК 10х2 из которых: \n
            \t\t - шесть используются для подключения цифровых потоков со скоростью передачи 48 кбит/с или каналов тональной частоты по стыку С1-ФЛ-БИ, разъемы кабель 1 (1-4 КАН), кабель 2 (5-8 КАН), кабель 3(9 КАН/48 КБИТ/с) для двух полукомплектов. \n
            \t\t - один для подключения выносного пульта управления Д-30, разъем ПУЛЬТ НЧ. \n
        \t 2. четырех кабелей П-296 из которых; \n
            \t\t - два для подключения потока со скоростью 480/2048 кбит/с по стыку С1-ФЛ-КИ на вход моноблока ИЛ-3/4, который обеспечивает регенерацию линейного сигнала и преобразование его во внутристанционный стык,разъем «ИЛ 480/2048». \n
            \t\t - два для подключения потока со скоростью 480 кбит/с по стыку С1-И на вход стойки формирования линейного сигнала Д-39, разъем 480. \n
        \t 3. Одного кабеля  П-274М  для организации служебной связи с абонентами узла связи с помощью телефонного аппарата ТА-57 через коммутатор П-193М, разъем ТЛФ. \n
        \t 4. Восьми радиочастотными кабелями для соединения двух ЦТРС на ретрансляционном пункте, разъем 480-1/2048 («Вх. ТИ», «Вх. инф. лин.», «Вых. ТИ», «Вых. инф. лин.»), 480-2/2048 («Вх. ТИ», «Вх. инф. лин.», «Вых. ТИ», «Вых. инф. лин.»). \n
    </string>
    <string name="d0031_title"><b>Блок коммутации абонентских и служебных каналов Д-00-31</b></string>
    <string name="d0031_info">
         Предназначен для коммутации абонентских и служебных каналов, служебных линий, подключения измерительных приборов. \n\n
        <b>Блок в каждом направлении обеспечивает: </b> \n
        \t 1. Прием от УС до девяти каналов тональной частоты или цифровых каналов ЦК-48. \n
        \t 2. Коммутацию КТЧ на линейные входы / выходы аппаратуры П-331ТЧ для преобразования в ЦК-48 на передаче и обратного преобразования на приеме. \n
        \t 3. Коммутацию ЦК-48 на аппаратуру П-331-3А для объединения в цифровой поток 480 кбит/с на передачу. \n
        \t 4. Составление транзитных соединительных каналов. \n
        \t 5. Коммутацию ЦК-48  на стойку Д-39 в режиме «48». \n
        \t 6. Коммутацию аналоговых входов / выходов служебного канала СК-1 и СК-2 на аппаратуру формирования линейного сигнала требуемого направления в режимах 480, 2х480, 2048. \n
        \t 7. Коммутацию вынесенного абонента аппаратуры П-331С. \n
        \t 8. Коммутацию цепей управления и служебных каналов микрофоном от ВПУ Д-30. \n
        \t 9. Коммутацию на аналоговые и цифровые выходы каналов измерительной аппаратуры П-321М и Д-00-127 соответственно. \n
        \t 10. Коммутацию служебных линий на выходы коммутатора П-193М. \n
        \t 11. Перевод двух КТЧ к 2ПР схеме окончанием с использованием встроенных дифсистем. \n
    </string>
    <string name="is_title"><b>Аппаратура служебной связи</b></string>
    <string name="is_info">
        Предназначена для организации линейной (ЛСС), постанционной (ПСС) и участковой (УСС) служебной связи. Линейная служебная связь организуется на всех линиях при использовании цифровых синхронных каналов служебной связи, образуемых ИО-3 и ИО-4, а постанционная служебная связь – по цифровому каналу со скоростью передачи 16 кбит/с, образуемому в ИЛ-3/4. Каналы ПСС и ЛСС имеют ЭППЧ 0,3 - 3,4 кГц, для их преобразования к цифровому виду применена адаптивная дельта-модуляция. \n
        \t Двухпроводный низкочастотный канал участковой служебной связи организуется по фантомной цепи, образованной на кабельной линии аппаратурой ИЛ-3/4. На НРП в этот канал включаются переносные переговорные устройства. \n
        \t Моноблок ИС обеспечивает каналы ЛСС, ПСС и УСС по двум направлениям с возможностью передачи их выходов на вынесенные устройства, а также организации их транзита между собой.
    </string>
    <string name="ita_r_title"><b>Аппаратура образования каналов ТЧ</b></string>
    <string name="ita_r_info">
        Предназначен для преобразования поступающих с блока коммутации на его входы аналоговых каналов в тональном окончании в ЦК-48, а также обратного преобразования. \n
        \t Любая пара дельта-кодеков при необходимости может быть заменена на пару трансформаторов или адаптеров, которые преобразовывают цифровые сигналы со скоростью передачи 1,2 (2,4; 4,8 и 9,6) кбит/с в цифровой сигнал со скоростью передачи 48 кбит/с. Цифровые выходы аппаратуры ИТ/А подключаются к соответствующим цифровым входам аппаратуры ИО-3А, а входы ИТ/А к выходам и ИО-3Б.
    </string>
    <string name="ita_l_title"><b>Аппаратура образования каналов ТЧ</b></string>
    <string name="ita_l_info">
        Предназначен для преобразования поступающих с блока коммутации на его входы аналоговых каналов в тональном окончании в ЦК-48, а также обратного преобразования. \n
        \t Любая пара дельта-кодеков при необходимости может быть заменена на пару трансформаторов или адаптеров, которые преобразовывают цифровые сигналы со скоростью передачи 1,2 (2,4; 4,8 и 9,6) кбит/с в цифровой сигнал со скоростью передачи 48 кбит/с. Цифровые выходы аппаратуры ИТ/А подключаются к соответствующим цифровым входам аппаратуры ИО-3А, а входы ИТ/А к выходам и ИО-3Б.
    </string>
    <string name="io4_title"><b>Аппаратура объединения (разделения) цифровых сигналов ИО-4</b></string>
    <string name="io4_info">
        Аппаратура четвертой ступени группообразования обеспечивает объединение (разделение) четырех цифровых потоков 480 кбит/с в групповой цифровой поток со скоростью 2048 кбит/с. Дополнительно образует СКСС со скоростью 22,75 кбит/с. \n
        \t Различные ступени объединения (разделения) могут применяться самостоятельно. При совместном использовании групповые цифровые сигналы младших ступеней передаются по соответствующим цифровым каналам старших ступеней. \n
        \t Кроме цифровых каналов на каждой ступени объединения (разделения) <b>образуются следующие дополнительные каналы:</b> \n
            \t\t  - прозрачные телеграфные каналы (ПТК); \n
            \t\t  - служебные телеграфные каналы (СТК); \n
            \t\t  - синхронные контрольные каналы (СКК); \n
            \t\t  - синхронные каналы служебной связи (СКСС).
    </string>
    <string name="il34_l_title"><b>Аппаратура оборудования линейного тракта</b></string>
    <string name="il34_l_info">
        Обеспечивает регенерацию и преобразование во внутристанционный стык поступающей на его вход абонентской цифровой последовательности 480 кбит/с. \n\n
        \t <b>Аппаратура ИЛ-3/4 обеспечивает:</b> \n
            \t\t - формирование линейного цифрового сигнала, поступающего с ИО-3 (третий режим, скорость передачи 480 кбит/с) или с ИО-4 (четвертый режим, скорость передачи 2048 кбит/с); \n
            \t\t - cкорость приема (передачи) с которой будет работать аппаратура, устанавливается вручную, с помощью муфты; \n
            \t\t - сопряжение цифрового линейного тракта с аппаратурой ИКМ-120 при вводе цифрового линейного сигнала со скоростью передачи 2048 кбит/с в аппаратуру ИКМ-120 вместо любой первичной системы ИКМ-30 (стык НDВ-3); \n
            \t\t - сопряжение с аппаратурой радиорелейных, тропосферных и спутниковых линий связи; \n
            \t\t - образование цепи дистанционного питания НРП; \n
            \t\t - образование цепи для организации участковой служебной связи в пределах секции дистанционного питания; \n
            \t\t - образование цифрового канала со скоростью передачи 16 кбит/с для постанционной служебной связи на ПКЛ; \n
            \t\t - функциональный контроль цифрового линейного тракта ПКЛ;\n
            \t\t - дистанционный контроль НРП, определение участка обрыва и короткого замыкания цепи дистанционного питания.

    </string>
    <string name="d0040_title"><b>Тракт СВЧ левого (правого) борта Д-00-39 (Д-00-40).</b></string>
    <string name="d0040_info">
        Предназначен для ослабления побочных компонентов на выходе передающего тракта, а также развязки трактов приема и передачи. \n\n
        <b>Имеет следующие характеристики:</b> \n
        \t -приборы обеспечивают работу в двух поддиапазонах частот по 120 МГц каждый с разносом между ними 75 МГц; \n
        \t -потери на рабочих частотах в тракте приема (передачи) – не более 2 дБ; \n
        \t -ослабление мощности основной частоты передатчика на выходе приемника – не менее 110 дБ. \n
    </string>
    <string name="io3b_r_title"><b>Аппаратура разделения цифровых сигналов ИО-3Б</b></string>
    <string name="io3b_r_info">
        Аппаратура третьей ступени обеспечивает объединение (разделение) ЦК-48 в групповой цифровой поток со скоростью 480 кбит/с. Необходима для работы в скоростных режимах «2х480» и «2048».
    </string>
    <string name="io3a_r_title"><b>Аппаратура объединения цифровых сигналов ИО-3А</b></string>
    <string name="io3a_r_info">
        Аппаратура третьей ступени группообразования обеспечивает объединение (разделение) ЦК-48 в групповой цифровой поток со скоростью 480 кбит/с.  Дополнительно образует ПТК (2*100), СТК(1*50) и один синхронный канал служебной связи со скоростью 19,2 кбит/с.
    </string>
    <string name="io3b_l_title"><b>Аппаратура разделения цифровых сигналов ИО-3Б</b></string>
    <string name="io3b_l_info">
        Аппаратура третьей ступени обеспечивает объединение (разделение) ЦК-48 в групповой цифровой поток со скоростью 480 кбит/с. Необходима для работы в скоростных режимах «2х480» и «2048».
    </string>
    <string name="io3a_l_title"><b>Аппаратура объединения цифровых сигналов ИО-3А</b></string>
    <string name="io3a_l_info">
        Аппаратура третьей ступени группообразования обеспечивает объединение (разделение) ЦК-48 в групповой цифровой поток со скоростью 480 кбит/с.Дополнительно образует ПТК (2*100), СТК(1*50) и один синхронный канал служебной связи со скоростью 19,2 кбит/с.
    </string>
</resources>